# eos-application-tools

./: Makefile.am  README.md  configure.ac
.tx/: config
apps/: Makefile.am
apps/com.dropbox.Client/: eos-dropbox.appdata.xml  eos-dropbox.desktop.in
apps/com.endlessnetwork.MidnightmareTeddy/: eos-get-com.endlessnetwork.MidnightmareTeddy.appdata.xml  eos-get-com.endlessnetwork.MidnightmareTeddy.desktop.in
apps/com.endlessnetwork.aqueducts/: eos-get-com.endlessnetwork.aqueducts.appdata.xml  eos-get-com.endlessnetwork.aqueducts.desktop.in
apps/com.endlessnetwork.dragonsapprentice/: eos-get-com.endlessnetwork.dragonsapprentice.appdata.xml  eos-get-com.endlessnetwork.dragonsapprentice.desktop.in
apps/com.endlessnetwork.frogsquash/: eos-get-com.endlessnetwork.frogsquash.appdata.xml  eos-get-com.endlessnetwork.frogsquash.desktop.in
apps/com.endlessnetwork.missilemath/: eos-get-com.endlessnetwork.missilemath.appdata.xml  eos-get-com.endlessnetwork.missilemath.desktop.in
apps/com.endlessnetwork.passage/: eos-get-com.endlessnetwork.passage.appdata.xml  eos-get-com.endlessnetwork.passage.desktop.in
apps/com.endlessnetwork.tankwarriors/: eos-get-com.endlessnetwork.tankwarriors.appdata.xml  eos-get-com.endlessnetwork.tankwarriors.desktop.in
apps/com.google.AndroidStudio/: eos-android-studio.appdata.xml  eos-android-studio.desktop.in
apps/com.google.Chrome/: com.endlessm.GoogleChromeInitialSetup.desktop.in  com.google.Chrome.postinstall  google-chrome.desktop
apps/com.microsoft.Skype/: eos-skype.appdata.xml  eos-skype.desktop  eos-skype.desktop.in
apps/com.skype.Client/: eos-skype.appdata.xml  eos-skype.desktop.in
apps/com.spotify.Client/: eos-spotify.appdata.xml  eos-spotify.desktop  eos-spotify.desktop.in
apps/com.unity.UnityHub/: eos-unity.appdata.xml  eos-unity.desktop.in
apps/org.videolan.VLC/: eos-vlc-helper.appdata.xml  eos-vlc.appdata.xml  eos-vlc.desktop  eos-vlc.desktop.in
apps/us.zoom.Zoom/: eos-get-us.zoom.Zoom.desktop.in
data/: 10-autoinstall.conf  10-default.json  50-decibels.json  50-default.json  50-eog.json  50-eos3.3.json  50-epiphany.json  50-file-roller.json  50-font-viewer.json  50-gedit.json  50-gnome-calculator.json  50-gnome-clocks.json  50-gnome-contacts.json  50-gnome-logs.json  50-loupe.json  50-music.json  50-remove-evergreen.json  51-rhythmbox.json  52-cheese.json  53-evince.json  53-shotwell.json  54-eog.json  Makefile.am  com.endlessm.AppInstallHelper.system-helper.policy  com.endlessm.AppInstallHelper.system-helper.policy.in  com.endlessm.GoogleChromeHelper.gschema.xml  com.endlessm.GoogleChromeInitialSetup.desktop.in  com.endlessm.GoogleChromeInitialSetup.gschema.xml  eos-icon-overrides.ini  validate-actions
debian/: changelog  control  eos-flatpak-autoinstall.install  eos-install-app-helper.install
install-app-helper/: Makefile.am  config.py.in  eos-install-app-helper-installer.py  eos-install-app-system-helper.py
po/: Makevars  POTFILES.in  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  eos-application-tools.pot  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  fur.po  fy.po  ga.po  (+80 more)
src/: Makefile.am  config.py.in  eos-google-chrome-installer  eos-install-app-helper-installer.py  eos-install-app-helper.in  eos-install-app-helper.py
