# List of flatpaks to auto-install on the next boot (if they have not
# already been uninstalled).
flatpaksdir = $(datadir)/eos-application-tools/flatpak-autoinstall.d

dist_flatpaks_DATA = \
	50-font-viewer.json \
	50-gedit.json \
	50-gnome-calculator.json \
	50-gnome-contacts.json \
	50-gnome-logs.json \
	50-remove-evergreen.json \
	51-rhythmbox.json \
	52-cheese.json \
	53-shotwell.json
